<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/nav_drawer_lunch"
                    android:icon="@drawable/ic_local_dining"
                    android:title="@string/your_lunch" />
                <item
                    android:id="@+id/nav_drawer_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_drawer_logout"
                    android:icon="@drawable/ic_power_settings_new"
                    android:title="@string/log_out" />
            </menu>
        </item>
    </group>
</menu>