<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsRestaurantActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/details_guideline_forty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/details_guideline_fifty_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/details_guideline_seventy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/details_guideline_eighty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>

    <ImageView
        android:id="@+id/details_image_restaurant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/details_guideline_forty"
        android:contentDescription="@string/restaurant_photo"/>

    <ImageView
        android:id="@+id/details_background_color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_guideline_forty"
        app:layout_constraintBottom_toTopOf="@+id/details_guideline_fifty_five"
        android:contentDescription="@string/primary_color"/>

    <TextView
        android:id="@+id/details_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/restaurant_name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="bottom"
        android:textAlignment="gravity"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/details_opinions"
        app:layout_constraintTop_toBottomOf="@+id/details_guideline_forty"
        app:layout_constraintBottom_toTopOf="@+id/details_type"/>

    <TextView
        android:id="@+id/details_opinions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="opinions"
        android:gravity="bottom"
        android:textAlignment="gravity"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/details_name"
        app:layout_constraintEnd_toEndOf="@+id/details_guideline_eighty"
        app:layout_constraintTop_toBottomOf="@+id/details_guideline_forty"
        app:layout_constraintBottom_toTopOf="@+id/details_type"/>

    <TextView
        android:id="@+id/details_type"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="type"
        android:textColor="@android:color/white"
        android:gravity="top"
        android:textAlignment="gravity"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/details_address"
        app:layout_constraintTop_toBottomOf="@+id/details_name"
        app:layout_constraintBottom_toTopOf="@+id/details_guideline_fifty_five"/>

    <TextView
        android:id="@+id/details_address"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/restaurant_address"
        android:textColor="@android:color/white"
        android:gravity="top"
        android:textAlignment="gravity"
        android:ellipsize="end"
        android:singleLine="true"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@+id/details_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_name"
        app:layout_constraintBottom_toTopOf="@+id/details_guideline_fifty_five"/>

    <Button
        android:id="@+id/details_button_call"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/call"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:drawableTop="@drawable/ic_phone"
        android:background="@android:color/white"
        android:paddingTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/details_button_like"
        app:layout_constraintTop_toBottomOf="@+id/details_guideline_fifty_five"
        app:layout_constraintBottom_toTopOf="@+id/details_guideline_seventy"/>

    <Button
        android:id="@+id/details_button_like"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/like"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:drawableTop="@drawable/ic_star"
        android:background="@android:color/white"
        android:paddingTop="16dp"
        app:layout_constraintStart_toEndOf="@id/details_button_call"
        app:layout_constraintEnd_toStartOf="@id/details_button_website"
        app:layout_constraintTop_toBottomOf="@+id/details_guideline_fifty_five"
        app:layout_constraintBottom_toTopOf="@+id/details_guideline_seventy"/>

    <Button
        android:id="@+id/details_button_website"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/website"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:drawableTop="@drawable/ic_public"
        android:background="@android:color/white"
        android:paddingTop="16dp"
        app:layout_constraintStart_toEndOf="@id/details_button_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_guideline_fifty_five"
        app:layout_constraintBottom_toTopOf="@+id/details_guideline_seventy"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/details_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginEnd="24dp"
        app:backgroundTint="@android:color/white"
        app:srcCompat="@drawable/ic_highlight_off"
        app:fabCustomSize="64dp"
        app:maxImageSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_guideline_forty"
        app:layout_constraintBottom_toTopOf="@+id/details_guideline_forty"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/details_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_guideline_seventy"
        app:layout_constraintBottom_toBottomOf="parent">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>