<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:elevation="8dp"
    app:titleTextColor="@android:color/white"
    tools:targetApi="LOLLIPOP">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp"
        android:layout_margin="8dp"
        app:cardElevation="2dp"
        android:background="@android:color/white"
        android:visibility="invisible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/toolbar_ic_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/toolbar_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_search_toolbar"
                android:contentDescription="@string/search_icon"/>

            <EditText
                android:id="@+id/toolbar_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/search_restaurants"
                android:background="@android:color/white"
                android:hint="@string/search_restaurants"
                android:inputType="text"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/toolbar_ic_mic"
                app:layout_constraintStart_toEndOf="@+id/toolbar_ic_search"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="O" />

            <ImageView
                android:id="@+id/toolbar_ic_mic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toolbar_edit_text"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_mic_toolbar"
                android:contentDescription="@string/hungry"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.Toolbar>